# perception-auv

./: .clang-format  .gitignore  .gitmodules  .isaac_ros_common-config  .pre-commit-config.yaml  README.md  dependencies.https.repos  dependencies.repos  dependencies.ssh.repos  entrypoint.sh  ros2.repos
.github/workflows/: clang-format-checker.yml  clang-formatter.yml  docker-export.yml  docker-publish.yml  industrial-ci.yml  industrial_ci.yml  python-format-checker.yml  python-formatter.yml  semantic-release.yml  source-build.yaml
config/: fastdds_multi_interface.xml
depth-to-point/: CMakeLists.txt  package.xml
depth-to-point/launch/: dept_to_point.launch.py
depth-to-point/src/: dept_to_point_node.cpp
docker/: Dockerfile  build.sh  run.sh
perception_setup/: CMakeLists.txt  Dockerfile  README.md  package.xml
perception_setup/config/: aruco_detector_params.yaml  cameras.yaml  color_realsense_d555_calib.yaml  d555_color_camera_factory.yaml  downwards_cam_calib.yaml  downwards_cam_params.yaml  flir_camera_calib.yaml  flir_camera_calib_downscale.yaml  front_camera_calib.yaml  front_camera_calib_downscale.yaml  front_camera_params.yaml  gripper_camera_calib.yaml  gripper_camera_calib_downscale.yaml  gripper_camera_params.yaml  image_filtering_params.yaml  nvblox_base.yaml  pipeline_filtering_params.yaml  pipeline_following.yaml  pipeline_line_fitting_params.yaml  pipeline_localization.yaml  realsense_d555.yaml  sim_nvblox.rviz  valve_detection_params.yaml  valve_intervention.yaml  visual_inspection.yaml  yolo_cls.yaml  yolo_detect.yaml  yolo_obb.yaml  yolo_seg.yaml  zed2_underwater_calib.conf  zed2_underwater_calib.yaml  zed_driver_params.yaml
perception_setup/config/cameras/: bfs_pge_16s2c_calib.yaml  blackfly_s_calib.yaml  blackfly_s_driver_params.yaml  blackfly_s_params.yaml  cameras.yaml  color_realsense_d555_calib.yaml  downwards_cam_calib.yaml  realsense_d555.yaml
perception_setup/config/image_processing/: image_crop.yaml  image_undistort.yaml
perception_setup/config/yolo/: yolo_cls.yaml  yolo_detect.yaml  yolo_obb.yaml  yolo_seg.yaml
perception_setup/include/perception_setup/: image_undistort.hpp
perception_setup/launch/: camera_info.launch.py  camera_info_pub.py  compression.launch.py  docking.launch.py  docking_blackfly_s.launch.py  docking_realsense_d555.launch.py  nvblox_sim.launch.py  octomap_server.launch.py  perception.launch.py  pipeline.launch.py  pipeline_blackfly_s.launch.py  pipeline_detection.launch.py  pipeline_following.launch.py  pipeline_localization.launch.py  pipeline_mclab_detection.launch.py  pipeline_realsense_d555.launch.py  realsense_d555.launch.py  seg_yolo_line.launch.py  simulator_valve_intervention.launch.py  ultralytics_valve_detection.launch.py  unet.launch.py  valve_intervention.launch.py  visual_inspection.launch.py  yolo_cls.launch.py  yolo_detect.launch.py  yolo_obb.launch.py  yolo_seg.launch.py  zed_composable_node.launch.py  zed_composable_node_launch.py  zed_yolo.launch.py  zed_yolo_valve_detection.launch.py  zed_yolov8.launch.py
perception_setup/launch/cameras/: bfs_pge_16s2c.launch.py  blackfly_s.launch.py  realsense_d555.launch.py  sonar.launch.py
perception_setup/launch/helpers/: camera_info_publisher.launch.py  image_crop.launch.py  image_undistort.launch.py
perception_setup/launch/image_processing/: camera_info_publisher.launch.py  image_crop.launch.py  image_undistort.launch.py
perception_setup/launch/isaac_ros/: isaac_ros_valve_intervention.launch.py
perception_setup/launch/ultralytics/: ultralytics_pipeline_line_fitting.launch.py  ultralytics_valve_detection.launch.py
perception_setup/launch/yolo/: yolo_cls.launch.py  yolo_detect.launch.py  yolo_obb.launch.py  yolo_seg.launch.py
perception_setup/scripts/: camera_info_publisher.py  image_crop.py  image_undistort.py  tmux_perception.sh
perception_setup/src/: image_undistort.cpp
pointcloud/depth_to_pointcloud/: package.xml  setup.py
pointcloud/depth_to_pointcloud/depth_to_pointcloud/: depth_cropper_node.py  depth_to_pointcloud_node.py  sync_and_save_node.py
pointcloud/depth_to_pointcloud/launch/: depth_cropper.launch.py  depth_to_pointcloud.launch.py  sync_and_save.launch.py
pointcloud/depth_to_pointcloud/scripts/: infer_color_folder.py  label_valve_centers.py  map_bboxes_to_depth.py
scripts/: ci_install_dependencies.sh  fastdds_profile.xml  pt_to_onnx.py  record_bag_perception.sh  set_MTU_nic.sh  set_fastdds_eno1.sh  unset_fastdds.sh
